- Updated font and spacing issues

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 
   .insync-heading {
     font-family: "Poppins", sans-serif;
-    font-size: 37px !important;
+    font-size: 38px !important;
     font-weight:400;
     font-style: normal;
     padding-top: 20px;
@@ -38,7 +38,7 @@
 
   .insync-welcome {
     font-family: "Poppins", sans-serif;
-    font-size: 40px !important;
+    font-size: 38px !important;
     font-style: normal;
     padding-top: 20px;
     margin-bottom: 0px;
@@ -63,6 +63,21 @@
     font-weight: 150;
     padding: 12px;
     border-color: #66694e;
+}
+
+#custom-btn-boxes{
+
+        border-color: #a8ab92;; 
+        border-width: 2px; 
+        border-radius: 25px; 
+        background-color: #a8ab92;  
+        font-family: "DMSans-Regular"; 
+        font-size: 14px; 
+        letter-spacing: 2px; 
+        font-weight: 150;
+        padding: 12px;
+        border-color: #66694e;
+    
 }
 
 strong {
@@ -131,7 +146,7 @@ strong {
     display: inline-block;
     text-decoration-line: none;
     font-family: "Poppins", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     white-space: nowrap;
     padding: 10px 16px;
@@ -407,7 +422,7 @@ blockquote {
     text-transform: none;
     line-height: 1.8;
     letter-spacing: 0.03em;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     font-family: 'Poppins';
     font-weight: 420px;
@@ -454,7 +469,7 @@ blockquote {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 18px;
+    font-size: 16px;
     text-transform: uppercase;
     color: #555931;
     font-stretch: expanded;
@@ -487,7 +502,7 @@ blockquote {
 .values-headings{
     color: #4b6a6a;
     text-transform: uppercase;
-    font-size: 24px;
+    font-size: 22px;
     text-align: left;
     font-family: 'Poppins';
 }
@@ -495,7 +510,7 @@ blockquote {
 .values-desc{
     color: #fdfcfc;
     line-height: 1.8;
-    font-size: 20px;
+    font-size: 18px;
     text-align: left;
     font-family: 'Poppins';
     font-weight: 400;
@@ -564,7 +579,7 @@ blockquote {
     color: whitesmoke;
     line-height: 1.4;
     letter-spacing: 0.02em;
-    font-size: 30px;
+    font-size: 22px;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
